# claude-deck

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.claude/skills/release/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: ci.yml  release-app.yml  release-cli.yml  release-plz.yml  release.yml
app/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: launcher.rs  lib.rs  pty.rs  session.rs
app/src/components/: BulkActions.tsx  DetailPanel.tsx  DiffView.tsx  FilterBar.tsx  Header.tsx  LaunchDialog.tsx  QuickActionEditor.tsx  QuickActionList.tsx  RenameDialog.tsx  SendDialog.tsx  SessionsTable.tsx  SettingsDialog.tsx  TagPicker.tsx  TerminalPane.tsx  WorkspacePicker.tsx  WorkspaceTabs.tsx
app/src/components/diff/: DiffContent.tsx  DiffView.tsx  FileListItem.tsx  InlineCommentEditor.tsx  LineContextMenu.tsx  SectionHeader.tsx  toast.test.ts  types.ts  utils.test.ts  utils.ts
app/src/components/ui/: alert-dialog.tsx  scroll-area.tsx  sonner.tsx
app/src/hooks/: useKeyboardShortcuts.ts  useSessionList.ts
app/src/lib/: ansi.test.ts  ansi.ts  api.ts  filters.test.ts  filters.ts  keybindings.ts  utils.ts  workspaceColors.ts
app/src/types/: quickAction.ts  session.ts
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: app.rs  cli.rs  main.rs
crates/cli/src/ui/: mod.rs  picker_dialog.rs  preview_panel.rs  sessions_table.rs  utils.rs  workspace_dialog.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: ansi.rs  config.rs  cost.rs  duration.rs  lib.rs  status.rs
crates/core/src/claude/: hooks.rs  launcher.rs  mod.rs
crates/core/src/model/: mod.rs  session.rs
crates/core/src/tmux/: command.rs  parser.rs  session.rs
src/: app.rs  cli.rs  config.rs  cost.rs  duration.rs  event.rs  main.rs
src/claude/: detector.rs  hooks.rs  launcher.rs  mod.rs
src/model/: session.rs
src/tmux/: command.rs  mod.rs  parser.rs  session.rs
src/ui/: confirm_dialog.rs  detail_panel.rs  help_bar.rs  launch_dialog.rs  logs_panel.rs  mod.rs  preview_panel.rs  quick_action_dialog.rs  rename_dialog.rs  send_dialog.rs  sessions_table.rs  utils.rs
