[package]
name = "claude-deck"
version = "0.1.0"
edition = "2021"
description = "A TUI dashboard to manage multiple Claude Code sessions via tmux"
license = "MIT"
repository = "https://github.com/ThomasTartrau/claude-deck"
homepage = "https://github.com/ThomasTartrau/claude-deck"
readme = "README.md"
keywords = ["claude", "tui", "tmux", "dashboard", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
chrono = "0.4"
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
toml = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
