[package]
name = "claude-deck-app"
version = "0.1.7"
description = "Desktop app for managing Claude Code sessions"
authors = ["ThomasTartrau"]
license = "MIT"
repository = "https://github.com/ThomasTartrau/claude-deck"
edition = "2021"
publish = false
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dirs = "6"
portable-pty = "0.9"
claude-deck-core = { path = "../../crates/core", version = "0.1.4" }
