[package]
name = "claude-deck-cli"
version = "0.4.22"
edition = "2021"
description = "A TUI dashboard to manage multiple Claude Code sessions via tmux"
license = "MIT"
repository = "https://github.com/ThomasTartrau/claude-deck"
homepage = "https://github.com/ThomasTartrau/claude-deck"
readme = "README.md"
keywords = ["claude", "tui", "tmux", "dashboard", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-deck"
path = "src/main.rs"

[dependencies]
claude-deck-core = { version = "0.5.0", path = "../core" }
ratatui = "0.30"
crossterm = "0.28"
chrono = "0.4"
dirs = "6"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
unicode-width = "0.2"
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
