[package]
name = "claude-deck-core"
version = "0.1.4"
edition = "2021"
description = "Shared core library for claude-deck CLI and GUI"
license = "MIT"
repository = "https://github.com/ThomasTartrau/claude-deck"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
anyhow = "1"
